# pdfmagick

./: CLAUDE.md  GEMINI.md  README.md  UI_IMPROVEMENT_ROADMAP.md  main.py  pyproject.toml  run.py  run_api.py  run_new.py
api/: __init__.py  main.py  models.py
core/: __init__.py  cache_manager.py  image_filters.py
src/: app.py  image_filters.py  pdf_processor.py
tests/: __init__.py  conftest.py  test_2up_functionality.py  test_auto_enhance.py  test_auto_enhance_api.py
web/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json
web/components/: ExportDialog.vue  FilterPanel.vue  FilterSlider.vue  ImageComparison.vue  PDFDetails.vue  PageNavigator.vue  ProgressOverlay.vue
web/pages/: index.vue
web/stores/: pdf.ts
web/web/: package-lock.json
